# xuannv_embdding

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  fusion_result.json  ge_check_op.json  pyproject.toml  sitecustomize.py  todo.txt
chats/: chat2.txt
configs/: base.yaml  haidian_128.yaml  haidian_128_stage2.yaml  haidian_128_stage2_infer.yaml  haidian_128_stage2_infer_lowres.yaml  haidian_128_stage2_infer_lowres_labeled.yaml  haidian_monthly.yaml  harbin_128.yaml  harbin_128_quick.yaml  harbin_128_stage2.yaml  harbin_128_stage2_quick.yaml  harbin_monthly.yaml  smoke.yaml  smoke_100step.yaml  smoke_s2_only.yaml  smoke_tiny.yaml  smoke_train.yaml  v1.1_distill_long.yaml  v1.1_distill_long_smoke.yaml  v1.1_distill_long_stable.yaml  v1.1_distill_long_stable_10ep.yaml  v1.1_distill_long_stable_50ep.yaml  v1.1_distill_long_stable_50ep_fast.yaml  v1.1_distill_long_stable_50ep_fast_smoke.yaml  v1.1_distill_long_stable_smoke.yaml  v1.1_distill_long_stage2.yaml  v1.1_distill_long_stage2_rkd.yaml  v1.1_distill_long_stage2_rkd_smoke.yaml  v1.1_distill_long_stage2_smoke.yaml  v1.1_distill_long_stage2_v2.yaml  v1.1_distill_quick.yaml  v1.1_distill_quick_harbin.yaml  v1.1_distill_quick_harbin_smoke.yaml  v1.1_distill_quick_smoke.yaml  v1.1_extract_labeled_all.yaml  v1.1_extract_labeled_all_stable.yaml  v1.1_extract_labeled_all_stage2.yaml  v1.1_extract_labeled_harbin.yaml  v1.2_extract_labeled.yaml  v1.2_national_crossmodal.yaml  (+28 more)
docs/: business_bp_materials_checklist.md  business_bp_restructure.md  business_bp_slide_plan_v2.md  business_bp_slide_plan_v3_us_benchmark.md  checkpoint_registry.md  data_inventory.md  data_layout.md
downstreams/: README.md  inference.py  validate_bitemporal_configs.py
reports/: embedding_model_progress_20260630.pptx
scripts/: create_xuannv_bp_deck.py  process_harbin_patches.py  serve_leadership_report.py
tests/: conftest.py  test_dataset.py  test_download_pc.py  test_eval.py  test_geo.py  test_manifest.py  test_mini_e2e.py  test_model.py  (+5 more)
(+328 files in other folders)
