[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xuannv_embedding"
version = "0.1.0"
description = "Clean re-implementation of AlphaEarth Foundations with monthly embeddings"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0,<2.2",
    "torch_npu>=2.1.0",
    "numpy>=1.24,<2",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "xarray>=2023.0",
    "pyyaml>=6.0",
    "tqdm",
    "planetary-computer>=1.0",
    "pystac-client",
    "stackstac",
    "modelscope>=1.15",
    "requests",
    "scikit-learn>=1.3",
    "fire",
]

[project.optional-dependencies]
downstream = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-image>=0.21",
    "shapely>=2.0",
]
aef = [
    "xarray>=2024.0",
    "zarr>=3.0",
    "s3fs>=2024.0",
    "rasterio>=1.3",
    "affine>=2.4",
    "pyproj>=3.0",
]

[tool.setuptools.packages.find]
where = ["src", "downstreams"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
